--- a/TiendaOnline.html
+++ b/TiendaOnline.html
@@ -28,19 +28,19 @@
         <h2>Nuestros Productos</h2>
         <div class="productos-container" id="productos-container">
             <div class="producto">
-                <img src="Imagenes/producto1.webp" alt="Producto 1">
+                <img src="producto1.webp" alt="Producto 1">
                 <h3>Producto 1</h3>
                 <p>Precio: $10</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes/producto2.webp" alt="Producto 2">
+                <img src="producto2.webp" alt="Producto 2">
                 <h3>Producto 2</h3>
                 <p>Precio: $20</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes/producto3.png" alt="Producto 3">
+                <img src="producto3.png" alt="Producto 3">
                 <h3>Producto 3</h3>
                 <p>Precio: $30</p>
                 <button>Agregar al Carrito</button>
