--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <section id="portada">
-        <img src="Imagenes/portada.webp" alt="Portada de la tienda" class="portada-img">
+        <img src="portada.webp" alt="Portada de la tienda" class="portada-img">
         <h2>Bienvenido a Nuestra Tienda Online</h2>
         <p>Encuentra los mejores productos al mejor precio.</p>
     </section>
